@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.43.00
 
+              pnmnorm: fix -colorvalue, -saturation, -keephues options.
+
 08.03.26 BJH  Release 10.42.00
 
               anytopnm: Recognize xwd image by 'file' type.
